fix border radius for work entries on mobile and contact form submitted

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -36,7 +36,7 @@
       padding: 0 75px;
 
       background: rgba(73, 47, 159, .65);
-      border-radius: 5px;
+      border-radius: 12px;
 
       font-size: 36px;
       font-family: 'Montserrat';
