--- a/src/components/Work/WorkBubble/work-bubble.scss
+++ b/src/components/Work/WorkBubble/work-bubble.scss
@@ -8,7 +8,7 @@
   color: var(--white) !important;
   background: rgba(0, 0, 0, 0.75);
 
-  border-radius: 5px;
+  border-radius: 12px;
 }
 
 .work-bubble-container {
